# CppGameChat

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/ui/: ChatView.cpp  ChatView.h  LoginView.cpp  LoginView.h
app/ui/widgets/: MessageItem.cpp  MessageItem.h
core/: CMakeLists.txt
core/models/: Message.h  Presence.h  User.h
core/repo/: FirestoreMapper.cpp  FirestoreMapper.h
core/services/: ChatService.cpp  ChatService.h  FirestoreClient.cpp  FirestoreClient.h  FriendsService.cpp  FriendsService.h  IFirestoreClient.h  PresenceService.cpp  PresenceService.h
core/utils/: Clock.cpp  Clock.h  Config.cpp  Config.h  Retry.cpp  Retry.h
tests/: CMakeLists.txt
tests/core_tests/: CMakeLists.txt  test_mapper.cpp  test_presence.cpp  test_retry.cpp
